Se agrega navbar y footer a inicio sesion y registro

--- a/html/producto.html
+++ b/html/producto.html
@@ -94,7 +94,7 @@
                 <p style="font-size: 3.1rem; color: white; text-align: center;">PRONTO EN DESARROLLO</p>
             </div>
         </div>
-
+        <button id="verCarrito" class="btn-primary" style="display: none;">Ver Carrito</button>
         <div id="overlay" class="overlay"></div>
     </main>
 
