--- a/html/formulario.html
+++ b/html/formulario.html
@@ -6,17 +6,54 @@
     <title>Formulario de Registro</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/formulario.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="icon" href="https://www.google.com/s2/favicons?domain=nafnaf.com.co&sz=64">
 </head>
 
-<body class="formulario">
+<body>
+    <header>
+        <div id="header-container" class="header-container">
+            <a href="/index.html" class="header-left">
+                <h1 class="letrasNavbar">NAF NAF</h1>
+            </a>
+            <nav id="main-nav" class="main-nav">
+                <a class="letrasNavbar" href="/html/nuevo.html">Nuevo</a>
+                <a class="letrasNavbar" href="/html/ropa.html">Ropa</a>
+                <a class="letrasNavbar" href="/html/basicos.html">Básicos</a>
+                <a href="/index.html" class="nav-discount letrasNavbar">Descuentos</a>
+                <button id="menu-toggle" class="icon-button2 letrasNavbar"><i class="fas fa-bars"></i></button>
+            </nav>
+            <div class="header-right">
+                <button class="icon-button letrasNavbar buscar"><i class="fas fa-search"></i></button>
+                <input type="text" id="campo-buscar" placeholder="Buscar..." style="display: none;">
+                <a href="/html/inicioSesion.html" target="_blank" class="icon-button letrasNavbar"><i
+                        class="fas fa-user"></i></a>
+                <button id="cart-toggle" class="icon-button letrasNavbar"><i class="fas fa-shopping-cart"></i></button>
+            </div>
+        </div>
+    </header>
+
+    <div id="side-menu" class="side-nav">
+        <button id="close-menu" class="close-btn">×</button>
+        <a href="#">Denim</a>
+        <a href="#">Accesorios</a>
+        <a href="#">Colecciones</a>
+        <a href="#">Afiliación</a>
+        <a href="#">Tiendas físicas</a>
+        <a href="#">Soporte</a>
+    </div>
+    
+    <main>
+    <div class="formLogin">
     <div class="container-formulario">
         <h2 class="titulo-formulario">Registro de Usuario</h2>
         <form class="formRegistro" method="post">
             <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" required>
+            <input class="input1" type="text" id="nombre" name="nombre" required>
 
             <label for="apellido">Apellido</label>
-            <input type="text" id="apellido" name="apellido" required>
+            <input class="input1" type="text" id="apellido" name="apellido" required>
 
             <label for="documento">Tipo de Documento</label>
             <select id="documento" name="documento" required>
@@ -27,26 +64,65 @@
             </select>
 
             <label for="numero-documento">Número de Documento</label>
-            <input type="text" id="numero-documento" name="numero-documento" required>
+            <input class="input1" type="text" id="numero-documento" name="numero-documento" required>
 
             <label for="email">Correo Electrónico</label>
-            <input type="email" id="email" name="email" required>
+            <input class="input1" type="email" id="email" name="email" required>
 
             <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" required minlength="6">
+            <input class="input1" type="password" id="password" name="password" required minlength="6">
 
             <div class="checkbox-container">
                 <label class="checkbox-label">
-                    <input class="checkbox-input" type="checkbox" name="terminos" required> Acepto los términos y
+                    <input class="checkbox1" type="checkbox" name="terminos" required> Acepto los términos y
                     condiciones
                 </label>
             </div>
 
-            <button type="submit">Registrarse</button>
+            <button class="button1" type="submit">Registrarse</button>
         </form>
     </div>
+    </div>
+    </main>
+    <div id="cart-menu" class="side-cart">
+        <div class="cart-header">
+            <h2>MI BOLSA</h2>
+            <button id="close-cart" class="close-btn">×</button>
+        </div>
+        <div class="cart-content">
+            <p style="font-size: 3.1rem; color: white; text-align: center;">PRONTO EN DESARROLLO</p>
+        </div>
+    </div>
+    <button id="verCarrito" class="btn-primary" style="display: none;">Ver Carrito</button>
+    <div id="overlay" class="overlay"></div>
+
+    <footer>
+        <div class="footer-links">
+            <a href="#">¿NECESITAS AYUDA?</a>
+            <a href="#">TÉRMINOS Y CONDICIONES</a>
+            <a href="#">NUESTRA MARCA</a>
+            <a href="#">TÉRMINOS LEGALES</a>
+            <a href="#">MÉTODOS DE PAGO</a>
+        </div>
+        <div class="footer-social">
+            <span>¡SÍGUENOS EN NUESTRAS REDES SOCIALES!</span>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-pinterest"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-tiktok"></i></a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>Todos los derechos reservados NAF NAF © 2022 | COMODIN S.A.S | NIT 800.069.933-6 | Calle 14 No. 52 A -
+                372 | Medellín - Colombia serviciocliente@nafnaf.com.co</p>
+        </div>
+    </footer>
+    
     <script src="/assets/js/funcionesInicioSesion.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
