Se linkean todas las opciones del menu hamburguesa y del footer con pagina original

--- a/html/producto.html
+++ b/html/producto.html
@@ -37,14 +37,13 @@
 
     <div id="side-menu" class="side-nav">
         <button id="close-menu" class="close-btn">×</button>
-        <a href="#">Denim</a>
-        <a href="#">Accesorios</a>
-        <a href="#">Colecciones</a>
-        <a href="#">Afiliación</a>
-        <a href="#">Tiendas físicas</a>
-        <a href="#">Soporte</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/denim">Denim</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/accesorios">Accesorios</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/new-arrivals">Colecciones</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/naf-and-me">Afiliación</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/localizar-tiendas">Tiendas físicas</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/servicio-al-cliente">Soporte</a>
     </div>
-
 
     <!-- CONTENIDO DETALLE PRODUCTO -->
     <main class="detalle-producto">
@@ -101,20 +100,20 @@
 
     <footer>
         <div class="footer-links">
-            <a href="#">¿NECESITAS AYUDA?</a>
-            <a href="#">TÉRMINOS Y CONDICIONES</a>
-            <a href="#">NUESTRA MARCA</a>
-            <a href="#">TÉRMINOS LEGALES</a>
-            <a href="#">MÉTODOS DE PAGO</a>
+            <a target="_blank" href="https://tpgco.teleperformance.co/TPCO/FormulariosV2/front/nafnaf">¿NECESITAS AYUDA?</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/terminos-condiciones">TÉRMINOS Y CONDICIONES</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/vistas/sostenibilidad">NUESTRA MARCA</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/servicios/promociones">TÉRMINOS LEGALES</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/tarjeta-credito">MÉTODOS DE PAGO</a>
         </div>
         <div class="footer-social">
             <span>¡SÍGUENOS EN NUESTRAS REDES SOCIALES!</span>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-pinterest"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-tiktok"></i></a>
+                <a target="_blank" href="https://www.facebook.com/nafnaflatam"><i class="fab fa-facebook-f"></i></a>
+                <a target="_blank" href="http://pinterest.com/nafnaflatam"><i class="fab fa-pinterest"></i></a>
+                <a target="_blank" href="https://www.youtube.com/user/NAFNAFCOLOMBIA"><i class="fab fa-youtube"></i></a>
+                <a target="_blank" href="https://www.instagram.com/nafnafcol"><i class="fab fa-instagram"></i></a>
+                <a target="_blank" href="https://www.tiktok.com/@nafnafcol"><i class="fab fa-tiktok"></i></a>
             </div>
         </div>
         <div class="footer-bottom">
@@ -122,7 +121,6 @@
                 372 | Medellín - Colombia serviciocliente@nafnaf.com.co</p>
         </div>
     </footer>
-
 
     <script src="/assets/js/productos.js" defer></script>
     <script src="/assets/js/detalle.js" defer></script>
