--- a/html/nuevo.html
+++ b/html/nuevo.html
@@ -55,13 +55,13 @@
     </header>
 
     <div id="side-menu" class="side-nav">
-      <button id="close-menu" class="close-btn">×</button>
-      <a href="#">Denim</a>
-      <a href="#">Accesorios</a>
-      <a href="#">Colecciones</a>
-      <a href="#">Afiliación</a>
-      <a href="#">Tiendas físicas</a>
-      <a href="#">Soporte</a>
+        <button id="close-menu" class="close-btn">×</button>
+        <a target="_blank" href="https://www.nafnaf.com.co/denim">Denim</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/accesorios">Accesorios</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/new-arrivals">Colecciones</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/naf-and-me">Afiliación</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/localizar-tiendas">Tiendas físicas</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/servicio-al-cliente">Soporte</a>
     </div>
 
     <main>
@@ -229,30 +229,27 @@
     </main>
 
     <footer>
-      <div class="footer-links">
-        <a href="#">¿NECESITAS AYUDA?</a>
-        <a href="#">TÉRMINOS Y CONDICIONES</a>
-        <a href="#">NUESTRA MARCA</a>
-        <a href="#">TÉRMINOS LEGALES</a>
-        <a href="#">MÉTODOS DE PAGO</a>
-      </div>
-      <div class="footer-social">
-        <span>¡SÍGUENOS EN NUESTRAS REDES SOCIALES!</span>
-        <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-pinterest"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-tiktok"></i></a>
+        <div class="footer-links">
+            <a target="_blank" href="https://tpgco.teleperformance.co/TPCO/FormulariosV2/front/nafnaf">¿NECESITAS AYUDA?</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/terminos-condiciones">TÉRMINOS Y CONDICIONES</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/vistas/sostenibilidad">NUESTRA MARCA</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/servicios/promociones">TÉRMINOS LEGALES</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/tarjeta-credito">MÉTODOS DE PAGO</a>
         </div>
-      </div>
-      <div class="footer-bottom">
-        <p>
-          Todos los derechos reservados NAF NAF © 2022 | COMODIN S.A.S | NIT
-          800.069.933-6 | Calle 14 No. 52 A - 372 | Medellín - Colombia
-          serviciocliente@nafnaf.com.co
-        </p>
-      </div>
+        <div class="footer-social">
+            <span>¡SÍGUENOS EN NUESTRAS REDES SOCIALES!</span>
+            <div class="social-icons">
+                <a target="_blank" href="https://www.facebook.com/nafnaflatam"><i class="fab fa-facebook-f"></i></a>
+                <a target="_blank" href="http://pinterest.com/nafnaflatam"><i class="fab fa-pinterest"></i></a>
+                <a target="_blank" href="https://www.youtube.com/user/NAFNAFCOLOMBIA"><i class="fab fa-youtube"></i></a>
+                <a target="_blank" href="https://www.instagram.com/nafnafcol"><i class="fab fa-instagram"></i></a>
+                <a target="_blank" href="https://www.tiktok.com/@nafnafcol"><i class="fab fa-tiktok"></i></a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>Todos los derechos reservados NAF NAF © 2022 | COMODIN S.A.S | NIT 800.069.933-6 | Calle 14 No. 52 A -
+                372 | Medellín - Colombia serviciocliente@nafnaf.com.co</p>
+        </div>
     </footer>
 
     <script src="./assets/js/main.js"></script>
