--- a/html/ropa.html
+++ b/html/ropa.html
@@ -35,6 +35,16 @@
         </div>
     </header>
 
+    <div id="side-menu" class="side-nav">
+        <button id="close-menu" class="close-btn">×</button>
+        <a target="_blank" href="https://www.nafnaf.com.co/denim">Denim</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/accesorios">Accesorios</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/new-arrivals">Colecciones</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/naf-and-me">Afiliación</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/localizar-tiendas">Tiendas físicas</a>
+        <a target="_blank" href="https://www.nafnaf.com.co/servicio-al-cliente">Soporte</a>
+    </div>
+
     <main>
         <h1
             style="text-align: center; font-size: 2.3rem; color: gray; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; padding: 10px;">
@@ -150,20 +160,20 @@
 
     <footer>
         <div class="footer-links">
-            <a href="#">¿NECESITAS AYUDA?</a>
-            <a href="#">TÉRMINOS Y CONDICIONES</a>
-            <a href="#">NUESTRA MARCA</a>
-            <a href="#">TÉRMINOS LEGALES</a>
-            <a href="#">MÉTODOS DE PAGO</a>
+            <a target="_blank" href="https://tpgco.teleperformance.co/TPCO/FormulariosV2/front/nafnaf">¿NECESITAS AYUDA?</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/terminos-condiciones">TÉRMINOS Y CONDICIONES</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/vistas/sostenibilidad">NUESTRA MARCA</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/servicios/promociones">TÉRMINOS LEGALES</a>
+            <a target="_blank" href="https://www.nafnaf.com.co/tarjeta-credito">MÉTODOS DE PAGO</a>
         </div>
         <div class="footer-social">
             <span>¡SÍGUENOS EN NUESTRAS REDES SOCIALES!</span>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-pinterest"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-tiktok"></i></a>
+                <a target="_blank" href="https://www.facebook.com/nafnaflatam"><i class="fab fa-facebook-f"></i></a>
+                <a target="_blank" href="http://pinterest.com/nafnaflatam"><i class="fab fa-pinterest"></i></a>
+                <a target="_blank" href="https://www.youtube.com/user/NAFNAFCOLOMBIA"><i class="fab fa-youtube"></i></a>
+                <a target="_blank" href="https://www.instagram.com/nafnafcol"><i class="fab fa-instagram"></i></a>
+                <a target="_blank" href="https://www.tiktok.com/@nafnafcol"><i class="fab fa-tiktok"></i></a>
             </div>
         </div>
         <div class="footer-bottom">
