--- a/html/nuevo.html
+++ b/html/nuevo.html
@@ -55,13 +55,23 @@
     </header>
 
     <div id="side-menu" class="side-nav">
-        <button id="close-menu" class="close-btn">×</button>
-        <a target="_blank" href="https://www.nafnaf.com.co/denim">Denim</a>
-        <a target="_blank" href="https://www.nafnaf.com.co/accesorios">Accesorios</a>
-        <a target="_blank" href="https://www.nafnaf.com.co/new-arrivals">Colecciones</a>
-        <a target="_blank" href="https://www.nafnaf.com.co/naf-and-me">Afiliación</a>
-        <a target="_blank" href="https://www.nafnaf.com.co/localizar-tiendas">Tiendas físicas</a>
-        <a target="_blank" href="https://www.nafnaf.com.co/servicio-al-cliente">Soporte</a>
+      <button id="close-menu" class="close-btn">×</button>
+      <a target="_blank" href="https://www.nafnaf.com.co/denim">Denim</a>
+      <a target="_blank" href="https://www.nafnaf.com.co/accesorios"
+        >Accesorios</a
+      >
+      <a target="_blank" href="https://www.nafnaf.com.co/new-arrivals"
+        >Colecciones</a
+      >
+      <a target="_blank" href="https://www.nafnaf.com.co/naf-and-me"
+        >Afiliación</a
+      >
+      <a target="_blank" href="https://www.nafnaf.com.co/localizar-tiendas"
+        >Tiendas físicas</a
+      >
+      <a target="_blank" href="https://www.nafnaf.com.co/servicio-al-cliente"
+        >Soporte</a
+      >
     </div>
 
     <main>
@@ -211,7 +221,7 @@
           <div class="price"><span class="original-price">$ 199.900</span></div>
         </div>
       </section>
-      
+
       <div id="cart-menu" class="side-cart">
         <div class="cart-header">
           <h2>MI BOLSA</h2>
@@ -229,29 +239,58 @@
     </main>
 
     <footer>
-        <div class="footer-links">
-            <a target="_blank" href="https://tpgco.teleperformance.co/TPCO/FormulariosV2/front/nafnaf">¿NECESITAS AYUDA?</a>
-            <a target="_blank" href="https://www.nafnaf.com.co/terminos-condiciones">TÉRMINOS Y CONDICIONES</a>
-            <a target="_blank" href="https://www.nafnaf.com.co/vistas/sostenibilidad">NUESTRA MARCA</a>
-            <a target="_blank" href="https://www.nafnaf.com.co/servicios/promociones">TÉRMINOS LEGALES</a>
-            <a target="_blank" href="https://www.nafnaf.com.co/tarjeta-credito">MÉTODOS DE PAGO</a>
+      <div class="footer-links">
+        <a
+          target="_blank"
+          href="https://tpgco.teleperformance.co/TPCO/FormulariosV2/front/nafnaf"
+          >¿NECESITAS AYUDA?</a
+        >
+        <a target="_blank" href="https://www.nafnaf.com.co/terminos-condiciones"
+          >TÉRMINOS Y CONDICIONES</a
+        >
+        <a
+          target="_blank"
+          href="https://www.nafnaf.com.co/vistas/sostenibilidad"
+          >NUESTRA MARCA</a
+        >
+        <a
+          target="_blank"
+          href="https://www.nafnaf.com.co/servicios/promociones"
+          >TÉRMINOS LEGALES</a
+        >
+        <a target="_blank" href="https://www.nafnaf.com.co/tarjeta-credito"
+          >MÉTODOS DE PAGO</a
+        >
+      </div>
+      <div class="footer-social">
+        <span>¡SÍGUENOS EN NUESTRAS REDES SOCIALES!</span>
+        <div class="social-icons">
+          <a target="_blank" href="https://www.facebook.com/nafnaflatam"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a target="_blank" href="http://pinterest.com/nafnaflatam"
+            ><i class="fab fa-pinterest"></i
+          ></a>
+          <a target="_blank" href="https://www.youtube.com/user/NAFNAFCOLOMBIA"
+            ><i class="fab fa-youtube"></i
+          ></a>
+          <a target="_blank" href="https://www.instagram.com/nafnafcol"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a target="_blank" href="https://www.tiktok.com/@nafnafcol"
+            ><i class="fab fa-tiktok"></i
+          ></a>
         </div>
-        <div class="footer-social">
-            <span>¡SÍGUENOS EN NUESTRAS REDES SOCIALES!</span>
-            <div class="social-icons">
-                <a target="_blank" href="https://www.facebook.com/nafnaflatam"><i class="fab fa-facebook-f"></i></a>
-                <a target="_blank" href="http://pinterest.com/nafnaflatam"><i class="fab fa-pinterest"></i></a>
-                <a target="_blank" href="https://www.youtube.com/user/NAFNAFCOLOMBIA"><i class="fab fa-youtube"></i></a>
-                <a target="_blank" href="https://www.instagram.com/nafnafcol"><i class="fab fa-instagram"></i></a>
-                <a target="_blank" href="https://www.tiktok.com/@nafnafcol"><i class="fab fa-tiktok"></i></a>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>Todos los derechos reservados NAF NAF © 2022 | COMODIN S.A.S | NIT 800.069.933-6 | Calle 14 No. 52 A -
-                372 | Medellín - Colombia serviciocliente@nafnaf.com.co</p>
-        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>
+          Todos los derechos reservados NAF NAF © 2022 | COMODIN S.A.S | NIT
+          800.069.933-6 | Calle 14 No. 52 A - 372 | Medellín - Colombia
+          serviciocliente@nafnaf.com.co
+        </p>
+      </div>
     </footer>
 
-    <script src="./assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
